force-app/main/default/objects/Process_Effectiveness__c/Process_Effectiveness__c.object-meta.xml
<CustomObject>
    <label>Process Effectiveness</label>
    <nameField>
        <displayFormat>PE-{0000}</displayFormat>
        <label>Process Effectiveness Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Effectiveness</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>