force-app/main/default/objects/Process_Effectiveness__c/fields/Effectiveness__c.field-meta.xml
<CustomField>
    <fullName>Effectiveness__c</fullName>
    <complianceGroup>Privacy - Non Personal Information;Integrity - Accurate;Source - Salesforce</complianceGroup>
    <description>Effectiveness Rating</description>
    <inlineHelpText>Used to indicate if the process is effective, or if it needs review</inlineHelpText>
    <label>Effectiveness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Effective</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>