force-app/main/default/objects/Process_Effectiveness__c/fields/Quality_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Quality_Assessment__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Parent Quality Assessment</description>
    <label>Quality Assessment</label>
    <referenceTo>Quality_Assessment__c</referenceTo>
    <relationshipLabel>Process Effectiveness</relationshipLabel>
    <relationshipName>Process_Effectiveness</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>