force-app/main/default/objects/Process_Effectiveness__c/fields/Relevant_Process__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Process__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Relevant Process</description>
    <inlineHelpText>Used to capture processes relevant to this interaction - note that this section is not related to Coach outcomes</inlineHelpText>
    <label>Relevant Process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>